--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ozy9sa6CVM1X9NlT87XUfjrL6oXKENp6abj2/KzgzcI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://tastybites.web.com
+VITE_APP_URL=http://tastybites.web.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,15 +24,17 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=backend
+DB_DATABASE=tastybites
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=.tastybites.web.com
+SANCTUM_STATEFUL_DOMAINS=tastybites.web.com
+
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
