--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "axios": "^1.12.0",
         "concurrently": "^9.2.1",
-        "laravel-vite-plugin": "^1.2.0",
+        "esbuild": "^0.19.12",
+        "laravel-vite-plugin": "^2.0.1",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "vite": "^7.1.5"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.13",
-        "@vitejs/plugin-vue": "^5.2.4",
         "material-icons": "^1.13.14",
         "vue": "^3.5.16",
         "vue-router": "^4.5.1"
