--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.13",
+        "chart.js": "^4.5.0",
         "fitty": "^2.4.2",
         "material-icons": "^1.13.14",
         "vue": "^3.5.16",
+        "vue-chartjs": "^5.3.2",
         "vue-router": "^4.5.1"
     }
 }
