--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/cli": "^4.1.14",
         "@tailwindcss/vite": "^4.1.14",
         "@vitejs/plugin-vue": "^6.0.1",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.12.0",
         "concurrently": "^9.2.1",
-        "esbuild": "^0.19.12",
+        "esbuild": "^0.25.10",
         "laravel-vite-plugin": "^2.0.1",
+        "postcss": "^8.5.6",
         "tailwindcss": "^4.1.14",
         "vite": "^7.1.5"
     },
